--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "23"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/yykk99/books#readme",
   "devDependencies": {
+    "prettier": "^3.6.2",
     "textlint": "^15.2.0",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2"
   }
