--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "23"
   },
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,14 @@
   },
   "homepage": "https://github.com/yykk99/books#readme",
   "devDependencies": {
+    "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "textlint": "^15.2.0",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --write ."
+    ]
   }
 }
