--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "books",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "23"
-  },
+  "main": "",
   "scripts": {
     "format": "prettier --write .",
     "prepare": "husky install"
