--- a/.github/workflows/textlint.yml
+++ b/.github/workflows/textlint.yml
@@ -28,13 +28,17 @@ jobs:
       - name: Run textlint and capture result
         run: |
           rm -f .textlint.log .textlint-exitcode
-          npx textlint work/**/*.md private/**/*.md > .textlint.log 2>&1 || echo $? > .textlint-exitcode
+          if ! npx textlint work/**/*.md private/**/*.md > .textlint.log 2>&1; then
+            echo "1" > .textlint-exitcode
+          fi
 
       - name: Comment on PR if lint fails
         if: always()
         run: |
           if [ -s .textlint.log ] && [ -f .textlint-exitcode ]; then
             gh pr comment "$PR_URL" --body "$(cat .textlint.log)"
+            echo "Textlint failed. Exiting with error."
+            exit 1
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
