--- a/.github/workflows/textlint.yml
+++ b/.github/workflows/textlint.yml
@@ -11,6 +11,8 @@ jobs:
   textlint:
     name: TextLint Check
     runs-on: ubuntu-latest
+    env:
+      MARKDOWN_PATHS: 'work/**/*.md private/**/*.md'
 
     steps:
       - name: Checkout code
@@ -26,6 +28,7 @@ jobs:
           npm install
 
       - name: Run textlint and capture result
+        id: textlint
         run: |
           if ! npx textlint $MARKDOWN_PATHS > .textlint.log 2>&1; then
             echo "Textlint failed"
@@ -38,6 +41,5 @@ jobs:
           gh pr comment "$PR_URL" --body "$(cat .textlint.log)"
           exit 1
         env:
-          MARKDOWN_PATHS: 'work/**/*.md private/**/*.md'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
